tests/build/cases/ui_node/delegate_expr_error_incorrect_type.stderr
error[E0277]: the trait bound `NotANode: zero_ui::prelude::UiNode` is not satisfied
 --> cases/ui_node/delegate_expr_error_incorrect_type.rs:9:22
  |
9 | #[ui_node(delegate = &self.inner, delegate_mut = &mut self.inner)]
  | ---------------------^--------------------------------------------
  | |                    |
  | |                    the trait `zero_ui::prelude::UiNode` is not implemented for `NotANode`
  | required by a bound introduced by this call
  |
  = help: the following other types implement trait `zero_ui::prelude::UiNode`:
